--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 
 src/assets/css/TEST.HTML
 **/node_modules
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
